fixed the bug on sidebar not showing on small screens

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -38,13 +38,13 @@
     ----------------------------------------------- */
     .sidebar {
             width: 250px;
-            transform: translateX(-260px);  /* hide it */
+            transform: translateX(-100%);  /* hide it */
             background: linear-gradient(180deg, #20262C 0%, #1D1411 100%);
             color: #f2f2f2;
             padding-top: 2rem;
             flex-shrink: 0;
-            position: relative;
-            transition: width 0.3s ease;
+            /*position: relative;*/
+            transition: transform 0.3s ease;
             box-shadow: 3px 0 12px rgba(0,0,0,0.2);
             font-family: 'Segoe UI', Arial, sans-serif;
             height: 100vh;
@@ -53,7 +53,7 @@
             position: fixed;
             left: 0;
             top: 0;
-            z-index: 1000;
+            z-index: 2000;
         }
 
         .sidebar.sidebar-open {
@@ -708,9 +708,6 @@
             }
             .chart-grid {
                 grid-template-columns: 1fr;
-            }
-            .sidebar {
-                display: none;
             }
         }
 
